<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_form"
    tools:ignore="ExtraText"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/pencil">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="127dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/loginn"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#141314"
                android:textStyle="bold"
                android:textSize="35dp"
                android:text="@string/head"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp">
            <Button
                android:id="@+id/button_health"
                android:layout_width="300dp"

                android:paddingLeft="10dp"
                android:layout_height="130dp"
                android:textSize="50dp"
                android:background="@drawable/bg1"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/Loginn"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp">
            <Button
                android:id="@+id/button_education"
                android:layout_width="300dp"
                android:paddingLeft="10dp"

                android:layout_height="130dp"
                android:textSize="47dp"
                android:background="@drawable/bg1"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF"
                android:text="@string/education"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp">
            <Button
                android:id="@+id/button_duty"
                android:layout_width="300dp"
                android:paddingLeft="10dp"

                android:layout_height="130dp"
                android:textSize="47dp"
                android:background="@drawable/bg1"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:textColor="#FFFFFF"
                android:text="प्रमुख अधिकारी"
                android:layout_marginBottom="30dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>